# myf1tenth_system

./: Dockerfile  LICENSE  README.md  build_container.sh  launch_container.sh
f1tenth_stack/: package.xml
f1tenth_stack/config/: sensors.yaml
f1tenth_stack/launch/: bringup_launch.py
manual_control/: CMakeLists.txt  package.xml
manual_control/src/: manual_control_node.cpp
scripts/: create_swapfile.sh  install_f710.sh  setup_devices.sh
src/f1tenth_stack/config/: manual_control.yaml
src/f1tenth_stack/launch/: bringup_launch.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/f1tenth_stack/share/f1tenth_stack/: package.sh
src/install/f1tenth_stack/share/f1tenth_stack/config/: sensors.yaml  vesc.yaml
src/install/manual_control/lib/manual_control/: manual_control_node
src/install/manual_control/share/manual_control/: local_setup.sh  package.sh
src/install/safety_pkg/lib/safety_pkg/: safety_node
src/install/safety_pkg/share/safety_pkg/: package.bash  package.sh  package.xml  package.zsh
src/install/safety_pkg/share/safety_pkg/cmake/: safety_pkgConfig.cmake
src/install/safety_pkg/share/safety_pkg/launch/: safety.launch.py
src/install/wall_follower/lib/wall_follower/: wall_follower
src/install/wall_follower/share/wall_follower/: package.sh
src/log/: latest_build
src/manual_control/params/: manual_control_node_params.yaml
src/manual_control/src/: manual_control_node.cpp
src/safety_pkg/: CMakeLists.txt
src/safety_pkg/config/: safety_params.yaml
src/safety_pkg/include/safety_pkg/: safety_node.hpp  ttc_calculator.hpp
src/safety_pkg/src/: main.cpp  safety_node.cpp  ttc_calculator.cpp
(+3 files in other folders)
